# earthquake_prediction_kz

./: README.md  analysis.ipynb  dvc.yaml  eval_plots.json  grid_serach.sh  params.yaml  pyproject.toml  untitled.txt
.dvc/: config
artifacts/: .gitignore  data.csv  metadata.json  test.csv  train.csv
artifacts/mean/: test_metrics.json  train_metrics.json
artifacts/min/: test_metrics.json  train_metrics.json
artifacts/min/rf_min_test_plots/: .gitignore
artifacts/preprocess/: .gitignore
artifacts/zero/: .gitignore  rf_metrics.json  rf_test_metrics.json  rf_train_metrics.json
artifacts_for_paper/: exp_5.xlsx  experiments_compare.csv  expperiments_3_algos.xlsx  metadata.json
data/: geocoded_areas.csv
dvc_plots/: index.html
eval_plots/plots/: confusion_matrix.json  roc.json
models/: .gitignore  metrics.json  metrics_random_forest.json
src/: collect_data.py  evaluation.py  model.py  model_random_forest.py  preprocess.py  train_test_split.py
