[tool.poetry]
name = "earthquake-prediction-kz"
version = "0.1.0"
description = "Strong earthquake events prediction"
authors = ["Yeldos Adetbekov <YAdetbekov@gmail.com>"]
readme = "README.md"
packages = [{include = "earthquake_prediction_kz"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.4"
numpy = "^1.23.2"
geopandas = "^0.11.1"
pygeos = "^0.13"
sklearn = "^0.0"
matplotlib = "^3.5.3"
shap = "^0.41.0"
dvclive = "^0.10.0"
lightgbm = "^3.3.2"


[tool.poetry.group.dev.dependencies]
dvc = "^2.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
